提交已修改的文件

--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
         这是测试git的HTML
     </div>
 
-=======
+
     <h1>这是测试</h1>
-    <p>我在red分支修改了文件</p>
->>>>>>> red
+   <p>徐康是傻逼</p>
+
 </body>
 </html>
